--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>プロ野球スピリッツA 攻略サイト</title>
     <!-- SEO対策：ページの説明とキーワード -->
     <meta name="description" content="プロ野球スピリッツAの攻略情報！ガチャ、選手評価、イベント攻略、初心者ガイドを毎日更新！">
-    <meta name="keywords" content="プロ野球スピリッツA, 攻略, ガチャ, 選手評価, イベント, 初心者ガイド">
+    <meta name="keywords" content="プロ野球スピリッツA, 攻略, ガチャ, 選手評価, イベント, 初心者ガイド, プロスピ">
     <!-- ファビコン：野球ボール風 -->
     <link rel="icon" href="favicon.ico">
     <!-- Google Fonts：Game8風のクリーンなフォント -->
@@ -63,15 +63,15 @@
             </section>
             <!-- 最新情報 -->
             <section>
-                <h2>最新攻略情報</h2>
+                <h2>最新攻略情報(2025 5/23更新！)</h2>
                 <div class="article-card">
-                    <h3>2025シーズン1 ガチャ評価</h3>
-                    <p>タイムスリップ第2弾ガチャの当たり選手は？小久保裕紀や大島洋平の評価をチェック！</p>
+                    <h3>2025シーズン1 ガチャ評価 2025/5/25</h3>
+                    <p>タイムスリップ(tS)第2弾ガチャの当たり選手は？小久保裕紀や大島洋平の評価をチェック！</p>
                     <a href="gacha.html">詳細を読む</a>
                 </div>
                 <div class="article-card">
-                    <h3>ドリームキャラバン攻略</h3>
-                    <p>効率的な進め方とおすすめ選手編成を紹介！</p>
+                    <h3>必勝アリーナ　即終わる！</h3>
+                    <p>効率的な進め方とおすすめ選手編成を紹介！累計報酬のTS33％契約書を引こう！</p>
                     <a href="events.html">詳細を読む</a>
                 </div>
                 <!-- 追加の記事はここに -->
@@ -88,7 +88,7 @@
             <h3>最新情報</h3>
             <ul>
                 <li><a href="gacha.html">2025.05.23 新ガチャ更新</a></li>
-                <li><a href="events.html">イベント「ベストナイン」攻略</a></li>
+                <li><a href="events.html">イベント「必勝アリーナ」攻略</a></li>
                 <li><a href="players.html">選手評価：イチロー</a></li>
                 <!-- 追加リンクはここに -->
             </ul>
