--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
 
     <!-- メインコンテンツ -->
     <div class="container">
+     
         <main>
             <!-- ヒーローセクション：Game8風のビジュアル -->
             <section class="hero">
-                <h2>プロ野球スピリッツAを極める！</h2>
-                <p>最新ガチャ、選手評価、イベント攻略で最強チームを作ろう！</p>
+                <img src="https://hayato040404.github.io/prospi-a-site/main.png" alt="メイン" class="responsive-img">
             </section>
             <!-- 最新情報 -->
             <section>
-                <h2>最新攻略情報(2025 5/23更新！)</h2>
+                <h2>最新攻略情報(2025 5/25更新！)</h2>
                 <div class="article-card">
-                    <h3>2025シーズン1 ガチャ評価 2025/5/25</h3>
+                    <h3>最新✨️ ガチャ評価</h3>
                     <p>タイムスリップ(tS)第2弾ガチャの当たり選手は？小久保裕紀や大島洋平の評価をチェック！</p>
                     <a href="gacha.html">詳細を読む</a>
                 </div>
                 <div class="article-card">
-                    <h3>必勝アリーナ　即終わる！</h3>
-                    <p>効率的な進め方とおすすめ選手編成を紹介！累計報酬のTS33％契約書を引こう！</p>
+                    <h3>最新イベントの攻略！</h3>
+                    <p>【必勝アリーナ】効率的な進め方とおすすめ選手編成を紹介！累計報酬のTS33％契約書を引こう！</p>
                     <a href="events.html">詳細を読む</a>
                 </div>
                 <!-- 追加の記事はここに -->
@@ -97,7 +97,7 @@
 
     <!-- フッター -->
     <footer>
-        <p>© 2025 プロ野球スピリッツA 攻略サイト. All Rights Reserved.</p>
+        <p>© 2025 プロスピ 攻略サイト. All Rights Reserved.</p>
     </footer>
 
     <!-- 外部JavaScript -->
