--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>プロ野球スピリッツA 攻略サイト</title>
+    <title>プロスピ 攻略サイト</title>
     <!-- SEO対策：ページの説明とキーワード -->
     <meta name="description" content="プロ野球スピリッツAの攻略情報！ガチャ、選手評価、イベント攻略、初心者ガイドを毎日更新！">
     <meta name="keywords" content="プロ野球スピリッツA, 攻略, ガチャ, 選手評価, イベント, 初心者ガイド, プロスピ">
@@ -33,7 +33,7 @@
     <!-- ヘッダー：Game8風のナビゲーション -->
     <header>
         <div class="header-container">
-            <h1>プロ野球スピリッツA 攻略サイト</h1>
+            <h1>プロスピ 攻略サイト</h1>
             <!-- ハンバーガーメニューボタン（モバイル用） -->
             <button class="hamburger" aria-label="メニューを開く">
                 <span></span>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="article-card">
                     <h3>最新イベントの攻略！</h3>
-                    <p>【必勝アリーナ】効率的な進め方とおすすめ選手編成を紹介！累計報酬のTS33％契約書を引こう！</p>
+                    <p>【必勝アリーナ】効率的な進め方とおすすめ選手編成を紹介！累計報酬のTS33％契約書を引こう！（33%シュミレーター制作中⋯）</p>
                     <a href="events.html">詳細を読む</a>
                 </div>
                 <!-- 追加の記事はここに -->
@@ -89,7 +89,7 @@
             <ul>
                 <li><a href="gacha.html">2025.05.23 新ガチャ更新</a></li>
                 <li><a href="events.html">イベント「必勝アリーナ」攻略</a></li>
-                <li><a href="players.html">選手評価：イチロー</a></li>
+                <li><a href="players.html">選手評価：小久保裕紀</a></li>
                 <!-- 追加リンクはここに -->
             </ul>
         </aside>
