--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "プロ野球スピリッツA 攻略サイト",
-        "url": "https://your-site.com",
+        "url": "http://purosupi-a.f5.si",
         "description": "プロ野球スピリッツAの攻略情報を提供。",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://your-site.com/search?q={search_term_string}",
+            "target": "http://purosupi-a.f5.si/search?q={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
@@ -97,7 +97,7 @@
 
     <!-- フッター -->
     <footer>
-        <p>© 2025 プロスピ 攻略サイト. All Rights Reserved.</p>
+        <p>© 2025 プロスピ 攻略サイト . All Rights Reserved.</p>
     </footer>
 
     <!-- 外部JavaScript -->
