--- a/beginner.html
+++ b/beginner.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>初心者ガイド | プロ野球スピリッツA 攻略サイト</title>
     <meta name="description" content="プロ野球スピリッツAの初心者向けガイド！基本操作から序盤の効率的な進め方を解説。">
-    <meta name="keywords" content="プロ野球スピリッツA, 初心者, ガイド, 基本操作">
+    <meta name="keywords" content="プロ野球スピリッツA, 初心者, ガイド, 基本操作, プロスピ">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -14,12 +14,12 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "初心者ガイド",
-        "url": "https://your-site.com/beginner.html",
+        "url": "http://purosupi-a.f5.si/beginner.html",
         "description": "プロ野球スピリッツAの初心者向けガイド情報を提供。",
         "isPartOf": {
             "@type": "WebSite",
             "name": "プロ野球スピリッツA 攻略サイト",
-            "url": "https://your-site.com"
+            "url": "http://purosupi-a.f5.si"
         }
     }
     </script>
@@ -70,7 +70,7 @@
     </div>
 
     <footer>
-        <p>© 2025 プロ野球スピリッツA 攻略サイト. All Rights Reserved.</p>
+        <p>© 2025 プロスピ 攻略サイト. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
