--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>イベント攻略 | プロ野球スピリッツA 攻略サイト</title>
     <meta name="description" content="プロ野球スピリッツAのイベント攻略情報！効率的な進め方や報酬の獲得方法を解説。">
-    <meta name="keywords" content="プロ野球スピリッツA, イベント, 攻略, 報酬">
+    <meta name="keywords" content="プロ野球スピリッツA, イベント, 攻略, 報酬, プロスピ, 必勝アリーナ">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -14,12 +14,12 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "イベント攻略",
-        "url": "https://your-site.com/events.html",
+        "url": "https://purosupi-a.f5.si/events.html",
         "description": "プロ野球スピリッツAのイベント攻略情報を提供。",
         "isPartOf": {
             "@type": "WebSite",
             "name": "プロ野球スピリッツA 攻略サイト",
-            "url": "https://your-site.com"
+            "url": "https://purosupi-a.f5.si"
         }
     }
     </script>
@@ -70,7 +70,7 @@
     </div>
 
     <footer>
-        <p>© 2025 プロ野球スピリッツA 攻略サイト. All Rights Reserved.</p>
+        <p>© 2025 プロスピ 攻略サイト. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
