--- a/beginner.html
+++ b/beginner.html
@@ -14,12 +14,12 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "初心者ガイド",
-        "url": "http://purosupi-a.f5.si/beginner.html",
+        "url": "https://purosupi-a.f5.si/beginner.html",
         "description": "プロ野球スピリッツAの初心者向けガイド情報を提供。",
         "isPartOf": {
             "@type": "WebSite",
             "name": "プロ野球スピリッツA 攻略サイト",
-            "url": "http://purosupi-a.f5.si"
+            "url": "https://purosupi-a.f5.si"
         }
     }
     </script>
