--- a/gacha.html
+++ b/gacha.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ガチャ攻略 | プロ野球スピリッツA 攻略サイト</title>
     <meta name="description" content="プロ野球スピリッツAの最新ガチャ情報と攻略法！当たり選手や引き時のコツを徹底解説。">
-    <meta name="keywords" content="プロ野球スピリッツA, ガチャ, 攻略, 当たり選手">
+    <meta name="keywords" content="プロ野球スピリッツA, ガチャ, 攻略, 当たり選手, プロスピ, TS">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -14,12 +14,12 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "ガチャ攻略",
-        "url": "https://your-site.com/gacha.html",
+        "url": "https://purosupi-a.f5.si/gacha.html",
         "description": "プロ野球スピリッツAのガチャ攻略情報を提供。",
         "isPartOf": {
             "@type": "WebSite",
             "name": "プロ野球スピリッツA 攻略サイト",
-            "url": "https://your-site.com"
+            "url": "https://purosupi-a.f5.si"
         }
     }
     </script>
@@ -70,7 +70,7 @@
     </div>
 
     <footer>
-        <p>© 2025 プロ野球スピリッツA 攻略サイト. All Rights Reserved.</p>
+        <p>© 2025 プロスピ 攻略サイト. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
