--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "プロ野球スピリッツA 攻略サイト",
-        "url": "http://purosupi-a.f5.si",
+        "url": "https://purosupi-a.f5.si",
         "description": "プロ野球スピリッツAの攻略情報を提供。",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "http://purosupi-a.f5.si/search?q={search_term_string}",
+            "target": "https://purosupi-a.f5.si/search?q={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
