--- a/players.html
+++ b/players.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>選手評価 | プロ野球スピリッツA 攻略サイト</title>
     <meta name="description" content="プロ野球スピリッツAのSランク選手の評価とおすすめ育成方法を解説！">
-    <meta name="keywords" content="プロ野球スピリッツA, 選手評価, Sランク, 育成">
+    <meta name="keywords" content="プロ野球スピリッツA, 選手評価, Sランク, 育成, プロスピ">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
