--- a/players.html
+++ b/players.html
@@ -14,12 +14,12 @@
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "選手評価",
-        "url": "https://your-site.com/players.html",
+        "url": "https://purosupi-a.f5.si/players.html",
         "description": "プロ野球スピリッツAの選手評価情報を提供。",
         "isPartOf": {
             "@type": "WebSite",
-            "name": "プロ野球スピリッツA 攻略サイト",
-            "url": "https://your-site.com"
+            "name": "プロスピ 攻略サイト",
+            "url": "https://purosupi-a.f5.si"
         }
     }
     </script>
@@ -70,7 +70,7 @@
     </div>
 
     <footer>
-        <p>© 2025 プロ野球スピリッツA 攻略サイト. All Rights Reserved.</p>
+        <p>© 2025 プロスピ 攻略サイト. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
