--- a/gacha.html
+++ b/gacha.html
@@ -18,7 +18,7 @@
         "description": "プロ野球スピリッツAのガチャ攻略情報を提供。",
         "isPartOf": {
             "@type": "WebSite",
-            "name": "プロ野球スピリッツA 攻略サイト",
+            "name": "プロスピ 攻略サイト",
             "url": "https://purosupi-a.f5.si"
         }
     }
