--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "プロ野球スピリッツA 攻略サイト",
+        "name": "プロスピ 攻略サイト",
         "url": "https://purosupi-a.f5.si",
         "description": "プロ野球スピリッツAの攻略情報を提供。",
         "potentialAction": {
