--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         }
     }
     </script>
+    <meta name="monetag" content="5912163955942c91b58c6202cbf94864">
 </head>
 <body>
     <!-- ヘッダー：Game8風のナビゲーション -->
