--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </section>
             <!-- 最新情報 -->
             <section>
-                <h2>最新攻略情報(2025 5/25更新！)</h2>
+                <h2>最新攻略情報(2025 5/26更新！)</h2>
                 <div class="article-card">
                     <h3>最新✨️ ガチャ評価</h3>
-                    <p>タイムスリップ(tS)第2弾ガチャの当たり選手は？小久保裕紀や大島洋平の評価をチェック！</p>
+                    <p>タイムスリップ(ts)第2弾ガチャの当たり選手は？小久保裕紀や大島洋平の評価をチェック！</p>
                     <a href="gacha.html">詳細を読む</a>
                 </div>
                 <div class="article-card">
@@ -77,6 +77,12 @@
                     <p>【必勝アリーナ】効率的な進め方とおすすめ選手編成を紹介！累計報酬のTS33％契約書を引こう！（33%シュミレーター制作中⋯）</p>
                     <a href="events.html">詳細を読む</a>
                 </div>
+                <!-- 追加の記事はここに -->
+                <div class="article-card">
+                    <h3>エキサイティング到来！！</h3>
+                    <p>エキサイティングガチャ到来！！気になる選手のラインナップと、Sランクの配布はある？</p>
+                    <a href="#section">詳細を読む</a>
+                </div> 
                 <!-- 追加の記事はここに -->
                 <!-- <div class="article-card">
                     <h3>新しい記事</h3>
