--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <!-- 追加の記事はここに -->
                 <div class="article-card">
                     <h3>エキサイティング到来！！</h3>
-                    <p>エキサイティングガチャ到来！！気になる選手のラインナップと、Sランクの配布はある？</p>
+                    <p>エキサイティングガチャ到来！！気になる選手のラインナップを紹介！Sランクは何枚？</p>
                     <a href="#section">詳細を読む</a>
                 </div> 
                 <!-- 追加の記事はここに -->
