--- a/events.html
+++ b/events.html
@@ -50,12 +50,15 @@
             <section>
                 <h2>イベント攻略ガイド</h2>
                 <div class="article-card">
-                    <h3>ドリームキャラバン攻略</h3>
-                    <p>スタミナ管理が鍵！毎日3回無料挑戦を活用し、Sランク選手報酬を狙おう。</p>
+                    <h3>★必勝アリーナ★</h3>
+                    <h4>必勝アリーナで必ずすること2選！(累計回収勢)</h4><p></p>
+                  <p><strong>①お守りをかならず使う(ランキング勢は別)</strong></p>
+                  <p>②黄龍極を毎日一回はクリアする！</p>
+                  
                 </div>
                 <div class="article-card">
-                    <h3>ベストナインイベント</h3>
-                    <p>指定選手を起用してポイントを効率的に稼ぐ。限定称号をゲット！</p>
+                    <h3>★サクッと!育星ストリート★</h3>
+                    <p>自分好みの選手を育成！ポイントの改善があり、神イベに！？</p>
                 </div>
             </section>
         </main>
