--- a/index.html
+++ b/index.html
@@ -300,6 +300,9 @@
                         <h3 class="widget-title">📢 広告</h3>
                         <div class="ad-space">
                             <p>広告スペース</p>
+                            <!-- admax -->
+<script src="https://adm.shinobi.jp/s/9f7c5790f90bc5c18ae58819a422f5af"></script>
+<!-- admax -->
                         </div>
                     </div>
                 </aside>
