--- a/reroll.html
+++ b/reroll.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="プロスピAのリセマラ攻略ガイド。効率的なリセマラ方法と当たり選手ランキングを詳しく解説。">
-    <meta name="keywords" content="プロスピA,リセマラ,当たり,ランキング,効率,攻略">
+    <meta name="keywords" content="プロスピ,リセマラ,当たり,ランキング,効率,攻略">
     
     <title>リセマラ攻略 - プロスピA攻略サイト</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css-reroll.css">
 </head>
 <body>
     <!-- Header -->
@@ -573,7 +573,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script src="script-reroll.js"></script>
     <script>
         // Reroll Calculator
         document.addEventListener('DOMContentLoaded', function() {
