--- a/gacha.html
+++ b/gacha.html
@@ -286,9 +286,9 @@
                                     <img src="/placeholder.svg?height=120&width=200" alt="リセマラガイド">
                                 </div>
                                 <div class="article-content">
-                                    <h3><a href="#">リセマラ当たりランキング【最新版】</a></h3>
+                                    <h3><a href="reroll.html">リセマラ当たりランキング【最新版】</a></h3>
                                     <p>効率的なリセマラの方法と狙うべき選手について詳しく解説します。</p>
-                                    <span class="article-date">2025年6月5日</span>
+                                    <span class="article-date">2025年6月6日</span>
                                 </div>
                             </article>
 
