--- a/gacha.html
+++ b/gacha.html
@@ -88,7 +88,7 @@
                         </div>
                         
                         <div class="gacha-banner">
-                            <img src="/picture/gacha-ex.png?height=300&width=800" alt="EX第二弾">
+                            <img src="/picture/matsui.png?height=300&width=800" alt="EX第二弾">
                             <div class="gacha-info-overlay">
                                 <h3>松井秀喜セレクション</h3>
                                 <p>豪華選手が勢揃い！</p>
