--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         "@type": "WebSite",
         "name": "プロスピA攻略サイト",
         "description": "プロ野球スピリッツAの最新攻略情報、選手評価、イベント情報を詳しく解説",
-        "url": "https://purosupi-a.f5.si/",
+        "url": "https://purosupi-a.f5.si",
         "potentialAction": {
             "@type": "SearchAction",
             "target": "https://purosupi-a.f5.si/search?q={search_term_string}",
@@ -125,10 +125,10 @@
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】新イベント「プロスピカーニバル」開催！</h3>
+                                    <h3 class="news-title">【速報】新イベント「StarRoad」開催！</h3>
                                     <p class="news-excerpt">新しいイベントの詳細情報と攻略のポイントをまとめました。報酬も詳しく解説しています。</p>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年6月5日</span>
+                                        <span class="news-date">2025年6月14日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
@@ -136,13 +136,13 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="新選手情報">
+                                    <img src="/placeholder.svg?height=150&width=250" alt="松井セレ">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">新Sランク選手追加！性能評価まとめ</h3>
+                                    <h3 class="news-title">松井秀喜セレクション開催！性能評価まとめ</h3>
                                     <p class="news-excerpt">今回追加された新Sランク選手の詳細な性能評価と使用感をレビューしました。</p>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年6月5日</span>
+                                        <span class="news-date">2025年6月14日</span>
                                         <span class="news-category">選手</span>
                                     </div>
                                 </div>
@@ -155,8 +155,9 @@
                                 <div class="news-content">
                                     <h3 class="news-title">ガチャの引き時とおすすめ度</h3>
                                     <p class="news-excerpt">ガチャの詳細分析と、引くべきかどうかの判断基準を解説します。</p>
+                                    <a href="gacha.html" class="section-link">すべて見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年6月5日</span>
+                                        <span class="news-date">2025年6月14日</span>
                                         <span class="news-category">ガチャ</span>
                                     </div>
                                 </div>
