--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                 <div class="news-content">
                                     <h3 class="news-title">ガチャの引き時とおすすめ度</h3>
                                     <p class="news-excerpt">ガチャの詳細分析と、引くべきかどうかの判断基準を解説します。</p>
-                                    <a href="gacha.html" class="section-link">すべて見る</a>
+                                    <a href="gacha.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
                                         <span class="news-date">2025年6月14日</span>
                                         <span class="news-category">ガチャ</span>
