--- a/gacha.html
+++ b/gacha.html
@@ -167,7 +167,7 @@
                                     <div class="player-stats">
                                         <div class="stat-row">
                                             <span>ミート</span>
-                                            <span class="stat-value rank-a">A (84)</span>
+                                            <span class="stat-value rank-s">A (84)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>パワー</span>
@@ -175,11 +175,11 @@
                                         </div>
                                         <div class="stat-row">
                                             <span>走力</span>
-                                            <span class="stat-value rank-b">D (59)</span>
+                                            <span class="stat-value rank-c">D (59)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>守備</span>
-                                            <span class="stat-value rank-a">C (68)</span>
+                                            <span class="stat-value rank-b">C (68)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -201,15 +201,15 @@
                                         </div>
                                         <div class="stat-row">
                                             <span>パワー</span>
-                                            <span class="stat-value rank-a">A (84)</span>
+                                            <span class="stat-value rank-s">A (84)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>走力</span>
-                                            <span class="stat-value rank-a">D (58)</span>
+                                            <span class="stat-value rank-c">D (58)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>守備</span>
-                                            <span class="stat-value rank-s">D (59)</span>
+                                            <span class="stat-value rank-c">D (59)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -231,15 +231,15 @@
                                         </div>
                                         <div class="stat-row">
                                             <span>パワー</span>
-                                            <span class="stat-value rank-a">A (82)</span>
+                                            <span class="stat-value rank-s">A (82)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>走力</span>
-                                            <span class="stat-value rank-s">C (62)</span>
+                                            <span class="stat-value rank-b">C (62)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>守備</span>
-                                            <span class="stat-value rank-a">C (67)</span>
+                                            <span class="stat-value rank-b">C (67)</span>
                                         </div>
                                     </div>
                                 </div>
