--- a/reroll.html
+++ b/reroll.html
@@ -470,12 +470,12 @@
                         <div class="best-time-meter">
                             <div class="meter-label">リセマラ適正度</div>
                             <div class="meter-bar">
-                                <div class="meter-fill" style="width: 80%;"></div>
+                                <div class="meter-fill" style="width: 40%;"></div>
                             </div>
-                            <div class="meter-value">80%</div>
+                            <div class="meter-value">40%</div>
                         </div>
                         <div class="best-time-reason">
-                            <p><strong>理由:</strong> 現在、EX契約書がもらえます。</p>
+                            <p><strong>理由:</strong> 松井秀喜セレクションを行っているものの、すぐに累計回収は難しい。</p>
                         </div>
                     </div>
 
