--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="ガチャ情報">
+                                    <img src="/picture/matsui.png?height=150&width=250" alt="ガチャ情報">
                                 </div>
                                 <div class="news-content">
                                     <h3 class="news-title">ガチャの引き時とおすすめ度</h3>
