--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="プロ野球スピリッツA（プロスピA）の最新攻略情報、選手評価、イベント情報を詳しく解説。初心者から上級者まで役立つ攻略サイトです。">
     <meta name="keywords" content="プロスピ,プロ野球スピリッツA,攻略,選手,評価,イベント,ガチャ,リセマラ">
     <meta name="author" content="プロスピA攻略サイト">
-    
+    <meta name="c8282260dbcb9470c838cea1b9419dae4556e3e1" content="c8282260dbcb9470c838cea1b9419dae4556e3e1" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://purosupi-a.f5.si/">
