--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
                         <div class="news-grid">
                             <article class="news-card featured">
                                 <div class="news-image">
-                                    <img src="/image.png?height=200&width=400" alt="最新イベント情報">
+                                    <img src="/korosiamu.jpg?height=200&width=400" alt="最新イベント情報">
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】新イベント「StarRoad」開催！</h3>
-                                    <p class="news-excerpt">新しいイベントの詳細情報と攻略のポイントをまとめました。報酬も詳しく解説しています。</p>
+                                    <h3 class="news-title">【速報】新イベント「プロスピコロシアム」開催確定！</h3>
+                                    <p class="news-excerpt">新しいイベントの詳細情報と攻略のポイントをまとめました。報酬も詳しく解説しています。今回は、セレクションと同時開催か！？</p>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年6月14日</span>
+                                        <span class="news-date">2025年7月05日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
