--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="header-content">
                 <div class="logo">
                     <a href="index.html">
-                        <h1>プロスピA攻略</h1>
+                        <h1>プロスピ攻略</h1>
                     </a>
                 </div>
                 
@@ -125,9 +125,9 @@
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】新イベント「プロスピコロシアム」開催確定！</h3>
-                                    <p class="news-excerpt">新しいイベントの詳細情報と攻略のポイントをまとめました。報酬も詳しく解説しています。今回は、セレクションと同時開催か！？</p>
-                                    <a href="events.html" class="section-link">記事を見る</a>
+                                    <h3 class="news-title">【速報】プロスピセレクション廃止？助っ人外国人が登場。</h3>
+                                    <p class="news-excerpt">異例のスケジュール！？セレクション廃止疑惑があるものの、外国人助っ人登場！能力を詳しく解説します。</p>
+                                    <a href="gacha.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
                                         <span class="news-date">2025年7月05日</span>
                                         <span class="news-category">イベント</span>
@@ -139,12 +139,12 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/matsui.png?height=150&width=250" alt="ガチャ情報">
+                                    <img src="/picture/korosiamu.jpg?height=200&width=400" alt="イベント攻略">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">ガチャの引き時とおすすめ度</h3>
-                                    <p class="news-excerpt">ガチャの詳細分析と、引くべきかどうかの判断基準を解説します。</p>
-                                    <a href="gacha.html" class="section-link">記事を見る</a>
+                                    <h3 class="news-title">イベント「プロスピコロシアム」開催！</h3>
+                                    <p class="news-excerpt">ランキングで一位になる秘訣をお伝えします</p>
+                                    <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
                                         <span class="news-date">2025年6月14日</span>
                                         <span class="news-category">ガチャ</span>
