--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="news-grid">
                             <article class="news-card featured">
                                 <div class="news-image">
-                                    <img src="/picture/korosiamu.jpg?height=200&width=400" alt="最新イベント情報">
+                                    <img src="picture/IN_player_618watamE.jpg?height=200&width=400" alt="最新イベント情報">
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
