--- a/players.html
+++ b/players.html
@@ -117,29 +117,29 @@
                         <div class="players-grid">
                             <div class="player-card">
                                 <div class="player-image">
-                                    <img src="/placeholder.svg?height=200&width=150" alt="大谷翔平">
+                                    <img src="/placeholder.svg?height=200&width=150" alt="バウマン">
                                     <span class="player-rank rank-s">S</span>
                                 </div>
                                 <div class="player-info">
-                                    <h3 class="player-name">大谷 翔平</h3>
-                                    <p class="player-team">ロサンゼルス・エンゼルス</p>
-                                    <p class="player-position">投手/外野手</p>
+                                    <h3 class="player-name">バウマン</h3>
+                                    <p class="player-team">ヤクルト</p>
+                                    <p class="player-position">投手</p>
                                     <div class="player-stats">
                                         <div class="stat-row">
-                                            <span>ミート</span>
-                                            <span class="stat-value rank-s">S (95)</span>
+                                            <span>球威</span>
+                                            <span class="stat-value rank-b">B (71)</span>
                                         </div>
                                         <div class="stat-row">
-                                            <span>パワー</span>
-                                            <span class="stat-value rank-s">S (98)</span>
+                                            <span>制球</span>
+                                            <span class="stat-value rank-c">C (55)</span>
                                         </div>
                                         <div class="stat-row">
-                                            <span>走力</span>
-                                            <span class="stat-value rank-a">A (85)</span>
+                                            <span>スタミナ</span>
+                                            <span class="stat-value rank-c">C (59)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>守備</span>
-                                            <span class="stat-value rank-a">A (88)</span>
+                                            <span class="stat-value rank-a">---</span>
                                         </div>
                                     </div>
                                 </div>
@@ -147,29 +147,29 @@
 
                             <div class="player-card">
                                 <div class="player-image">
-                                    <img src="/placeholder.svg?height=200&width=150" alt="村上宗隆">
+                                    <img src="/placeholder.svg?height=200&width=150" alt="ディアス">
                                     <span class="player-rank rank-s">S</span>
                                 </div>
                                 <div class="player-info">
-                                    <h3 class="player-name">村上 宗隆</h3>
-                                    <p class="player-team">東京ヤクルトスワローズ</p>
-                                    <p class="player-position">内野手</p>
+                                    <h3 class="player-name">ディアス</h3>
+                                    <p class="player-team">ベイスターズ</p>
+                                    <p class="player-position">投手</p>
                                     <div class="player-stats">
                                         <div class="stat-row">
-                                            <span>ミート</span>
-                                            <span class="stat-value rank-a">A (88)</span>
+                                            <span>球威</span>
+                                            <span class="stat-value rank-c">C (68)</span>
                                         </div>
                                         <div class="stat-row">
-                                            <span>パワー</span>
-                                            <span class="stat-value rank-s">S (96)</span>
+                                            <span>制球</span>
+                                            <span class="stat-value rank-d">D (55)</span>
                                         </div>
                                         <div class="stat-row">
-                                            <span>走力</span>
-                                            <span class="stat-value rank-b">B (75)</span>
+                                            <span>スタミナ</span>
+                                            <span class="stat-value rank-d">D (58)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>守備</span>
-                                            <span class="stat-value rank-a">A (82)</span>
+                                            <span class="stat-value rank-a">---</span>
                                         </div>
                                     </div>
                                 </div>
@@ -181,8 +181,8 @@
                                     <span class="player-rank rank-s">S</span>
                                 </div>
                                 <div class="player-info">
-                                    <h3 class="player-name">山田 哲人</h3>
-                                    <p class="player-team">東京ヤクルトスワローズ</p>
+                                    <h3 class="player-name">古林睿煬</h3>
+                                    <p class="player-team">日本ハム</p>
                                     <p class="player-position">内野手</p>
                                     <div class="player-stats">
                                         <div class="stat-row">
