--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2 class="hero-title">プロスピA攻略サイト</h2>
+                <h2 class="hero-title">プロスピ攻略サイト</h2>
                 <p class="hero-subtitle">最新情報・選手評価・イベント攻略を詳しく解説</p>
                 <div class="hero-buttons">
                     <a href="gacha.html" class="btn btn-primary">ガチャ情報</a>
